--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>fanaimi, canvas fun with trigonometry</title>
     <link rel="stylesheet" href="build/css/main.css">
     <meta name="author" content="fanaimi, emiliano fantasia">
-    <meta name="description" content="drawing sine waves using canvas">
+    <meta name="description" content="drawing sine and cosine waves using canvas">
     <meta name="keywords" content="fanaimi, emiliano fantasia, fanaimi demo, canvas, canvas animation, javascript, html5">
 </head>
 <body>
-    <h1>fanaimi demo - canvas wave studio #1 - sine wave</h1>
-    <canvas class="canv" id="c1" width="1240" height="400"></canvas>
+    <h1>fanaimi demo - canvas wave studio #3 - sine and cosine waves</h1>
+    <canvas class="canv" id="c1" width="1240" height="750"></canvas>
     <p class="btnsPar">
         <button type="button" id="slowAngleBtn"> - angle speed</button>
         <button type="button" id="pauseAngleBtn"> 0 angle speed</button>
@@ -27,7 +27,7 @@
 
     <p class="textPar">You can also have a look at the <a href="http://fanaimi.com/demos/canvas_square_wave/"
                                                     >square wave</a>.</p>
-    <p class="textPar">Fork / contribute at this <a href="https://github.com/fanaimi/canvas_sine_wave" 
+    <p class="textPar">Fork / contribute at this <a href="https://github.com/fanaimi/canvas_sine_cosine_waves"
                                                     target="_blank">repo</a>.</p>
     <p class="textPar">Read more at this <a href="http://www.fanaimi.com/blog/canvas-trigonometry-waves-1-sine-wave/">post</a>.</p>
     <p class="textPar">Return to <a href="http://www.fanaimi.com/">fanaimi.com</a>.</p>
